[package]
name = "hi-vulkanos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { version = "0.34.0", features = ["macros", "serde"] }
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.1"
winit = "0.28.0"

[profile.dev]
opt-level = 1